--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <h1> Sravan kumar Etikala</h1>
-    Midhuna restaurant
-    
+   <h2>Midhuna restaurant</h2> 
+   <p1>It is located at peddapally main road. The restaurant is on national highway which connects two states Andhrapardesh and Maharastra, it is near to busstation. which serves the most famous dish special chicken biryani for food lovers</p1>
+<b> peddapally, lovers</b>
 </body>
 </html>
