--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1> Sravan kumar Etikala</h1>
    <h2>Midhuna restaurant</h2> 
-   <p1>It is located at peddapally main road.<b> peddapally, chicken.</b> It serves the most famous chicken biryani. </p1>
+   <p1>It is located at peddapally main road <b> peddapally.</b> It serves the most famous <b>chicken</b> biryani. </p1>
 </body>
 </html>
