--- a/index.html
+++ b/index.html
@@ -9,5 +9,16 @@
     <h1> Sravan kumar Etikala</h1>
    <h2>Midhuna restaurant</h2> 
    <p1>It is located at peddapally main road <b> peddapally.</b> It serves the most famous <b>chicken</b> biryani. </p1>
+   <hr>
+   <h3>Clear information about restaurant and its location</h3>
+   <p> The closest Airport is Rajiv Gandhi Airport in  Hyderabad.</p>
+   <ol> 
+       <li> Book a taxi from airport to peddapally which is 200 kilometers far away from hyderabad.</li>
+       <li> Follow the outer ring road entries that are towards karimnagar telangana.</li>
+       <li> Exit from the ORR exactly at gate 2 which is at shamirpet and Medchal district.</li>
+       <li> Continue on NH65 towards peddapally via siddipet and karimnagar.</li>
+       <li> When you reach from karimnagar continue on by-pass towards Ramagundam,it is 30 km far from karimnagar.</li>
+       <li> Finally when you reach peddaplly busstation, just continue on the same highway you will come to see a hording on your right side naming Midhuna restaurant</li>
+    </ol>
 </body>
 </html>
