--- a/index.html
+++ b/index.html
@@ -20,5 +20,10 @@
        <li> When you reach from karimnagar continue on by-pass towards Ramagundam,it is 30 km far from karimnagar.</li>
        <li> Finally when you reach peddaplly busstation, just continue on the same highway you will come to see a hording on your right side naming Midhuna restaurant</li>
     </ol>
+    <ul>
+        <li> special chicken biryani</li>
+        <li> Egg manvhuria</li>
+        <li> Telangana chicken curry</li>
+    </ul>
 </body>
 </html>
