--- a/index.html
+++ b/index.html
@@ -25,5 +25,7 @@
         <li> Egg manvhuria</li>
         <li> Telangana chicken curry</li>
     </ul>
+    <a href="aboutme.html">Link of the AboutMe</a>
+    <hr>
 </body>
 </html>
