--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
 <!DOCTYPE html>
+<style>
+    table, th, td {
+        border: 1px solid black;
+        border-collapse: collapse;
+    }
+</style>
 <html>
 <head>
     <title>
@@ -27,5 +33,33 @@
     </ul>
     <a href="aboutme.html">Link of the AboutMe</a>
     <hr>
-</body>
+    <h2>Games</h2>
+    <p>The games i recommend are below</p>
+    <table>
+        <tr>
+          <th>Name</th>
+          <th>Place</th>
+          <th>Price</th>
+        </tr>
+        <tr>
+          <td>Cricket</td>
+          <td>stadium</td>
+          <td>$60</td>
+        </tr>
+        <tr>
+            <td>football</td>
+            <td>green Park</td>
+            <td>$20</td>
+        </tr>
+        <tr>
+            <td>base ball</td>
+            <td>Box Park</td>
+            <td>$30</td>
+        </tr>
+        <tr>
+            <td>Tennis</td>
+            <td>Dry Park</td>
+            <td>$25</td>
+        </tr>
+    </table>
 </html>
