--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
+<a href=bonus.html>Bonus</a>
 <style>
+
     table, th, td {
         border: 1px solid black;
         border-collapse: collapse;
